--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_margin="8dp"
+<androidx.cardview.widget.CardView android:layout_margin="8dp"
     app:elevation="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -36,4 +36,4 @@
 
     </LinearLayout>
     
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
