--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,9 +34,9 @@
     <!--   Ghost-->
     <!-- Ghost colors from https://ghost.org/design -->
     <color name="ghost_blue">#3eb0ef</color>
-    <!--
-    <color name="white">#ffffff</color>
-    -->
+
+    <color name="white2">#ffffff</color>
+
     <color name="light_grey">#e5eff5</color>
     <color name="mid_grey">#738a94</color>
     <color name="dark_grey">#343f44</color>
@@ -45,7 +45,7 @@
     <color name="primary">#1e2527</color>
     <color name="primary_dark">#101415</color>
     <color name="accent">@color/ghost_blue</color>
-    <color name="background">@color/white</color>
+    <color name="background">@color/white2</color>
 
     <color name="text_primary">@color/dark_grey</color>
     <color name="text_secondary">@color/mid_grey</color>
