--- a/app/src/main/res/layout/activity_main_point.xml
+++ b/app/src/main/res/layout/activity_main_point.xml
@@ -7,6 +7,7 @@
     >
 
   <TextView
+      android:id="@+id/title1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="@dimen/home_page_title_padding_top"
@@ -16,11 +17,44 @@
       android:text="@string/title_point"
       android:textColor="@color/white"
       android:textSize="@dimen/home_page_title_size"/>
-
+  <ImageView
+      android:id="@+id/imageView1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:src="@drawable/mypoint" />
+  <TextView
+      android:id="@+id/point"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:paddingTop="@dimen/home_page_title_padding_top"
+      android:paddingBottom="@dimen/home_page_title_padding_bottom"
+      android:fontFamily="google-sans"
+      android:gravity="center_horizontal"
+      android:text="@string/title_point"
+      android:textColor="@color/white"
+      android:textSize="@dimen/home_page_title_size"/>
+  <ImageButton
+      android:id="@+id/btnPointplus"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:layout_gravity="center"
+      android:background="@null"
+      android:scaleType="centerCrop"
+      android:src="@drawable/ic_refresh" />
+  <ImageButton
+      android:id="@+id/btnPointminus"
+      android:layout_width="100dp"
+      android:layout_height="100dp"
+      android:layout_gravity="center"
+      android:background="@null"
+      android:scaleType="centerCrop"
+      android:src="@drawable/ic_refresh" />
+  <!--
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/mode_recycler_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scrollbars="vertical"/>
+    -->
 
 </LinearLayout>
