--- a/app/src/main/res/layout/activity_main_point.xml
+++ b/app/src/main/res/layout/activity_main_point.xml
@@ -27,7 +27,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="@dimen/home_page_title_padding_top"
-      android:paddingBottom="@dimen/home_page_title_padding_bottom"
+      android:paddingBottom="@dimen/home_page_point_padding_bottom"
       android:fontFamily="google-sans"
       android:gravity="center_horizontal"
       android:text="@string/title_point"
@@ -35,20 +35,42 @@
       android:textSize="@dimen/home_page_title_size"/>
   <ImageButton
       android:id="@+id/btnPointplus"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
+      android:layout_width="50dp"
+      android:layout_height="50dp"
       android:layout_gravity="center"
       android:background="@null"
       android:scaleType="centerCrop"
-      android:src="@drawable/ic_refresh" />
+      android:src="@drawable/plus" />
+  <TextView
+      android:id="@+id/pointplus"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:paddingTop="@dimen/home_page_title_padding_top"
+      android:paddingBottom="@dimen/home_page_title_padding_top"
+      android:fontFamily="google-sans"
+      android:gravity="center_horizontal"
+      android:text="@string/title_pointplus"
+      android:textColor="@color/white"
+      android:textSize="@dimen/home_page_point_size"/>
   <ImageButton
       android:id="@+id/btnPointminus"
-      android:layout_width="100dp"
-      android:layout_height="100dp"
+      android:layout_width="50dp"
+      android:layout_height="50dp"
       android:layout_gravity="center"
       android:background="@null"
       android:scaleType="centerCrop"
-      android:src="@drawable/ic_refresh" />
+      android:src="@drawable/minus" />
+  <TextView
+      android:id="@+id/pointminus"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:paddingTop="@dimen/home_page_title_padding_top"
+      android:paddingBottom="@dimen/home_page_point_padding_bottom"
+      android:fontFamily="google-sans"
+      android:gravity="center_horizontal"
+      android:text="@string/title_pointminus"
+      android:textColor="@color/white"
+      android:textSize="@dimen/home_page_title_size"/>
   <!--
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/mode_recycler_view"
